--- a/rootstock/content/01.abstract.md
+++ b/rootstock/content/01.abstract.md
@@ -1,3 +1,3 @@
 ## Abstract {.page_break_before}
 
-
+A gene is a smallest hereditary unit and it composes of DNA at DNA level. Its maintenance and sustainability is hence too crucial for living organisms. Although, the DNA expose to chemical and physical stress during a living things life span, it can be conserved with the help of DNA repair mechanisms. Afterwards the exposure of some degree of UV light, mutations occur at the DNA and cause the formation of either a cyclobutene pyrimidine damage (CPD) or a 6-4 pyrimidone pyrimidine photo products ((6-4)PP) damage. These UV damages are fixed by Nucleotide Excision Repair (NER). In contrast to DNA UV damage repair pattern, the distribution of UV damage throughout the genome after exposure of it was acquired by damage-seq and it was homogenously distributed. Therefore, the reason(s) of this discordant pattern between DNA UV damage repair and UV damage became a question which needs investigation. In this article, we are elucidating one of the plausible reasons of unequal patterns of UV repair and damage through impact of histone markers. We found that a normalization method of count numbers after the reference genome mapping RRRR works better than YYYY calling in terms of predicting high and low DNA repair profiles with given histone markers. Secondly, for same cell line type and mutation types, we succeed to predict DNA repair profiles within specified region (5000 base pair) of genome without looking at actual DNA repair pattern. Histone markers aaa, bbb, ccc found significantly related with DNA UV damage global repair mechanisms. These findings provide knowledge for explaining the cause of discordant pattern of UV damage and repair, even though results alone do not enough to clarify the reason of difference of repair and damage. Together with the results, it is now revealed that the histone markers are one of the main determiners of DNA repair heterogeneity. Skin melanoma and other long-term UV exposure associated diseases can be prevented or cured more effectively, if the NER mechanisms’ repair patterns and in vivo sequencing technologies are comprehended and developed appropriately. Since mutations start with abnormalities arise within DNA level thereby any damage occurs along the genome is a potential threat for passing of mutated DNA to new cells which cause cancer cells to be produced. Therefore, perceiving the behavior of NER global repair (GR) and transcription coupled repair (TCR) are important for preventing the formation of UV related diseases.
