--- a/pipelines/README
+++ b/pipelines/README
@@ -1,6 +1,6 @@
 README
 
-The pipeline directory, which includes four NGS methods, are uploaded. 
+This is the pipeline directory, which includes pipilines for preprocessing four NGS methods. 
 These pipelines are wrote such a way that they could be used either for downsampling a BED file or just applying the protocol written inside the pipelines. 
 
 ##The downsampling part need to be performed at the specified step inside the each type of sequencing method pipeline.
