--- a/Data/README
+++ b/Data/README
@@ -1,4 +1,4 @@
-#Notes about the HG19 reference genome:
+###Notes about the HG19 reference genome:
 
 This genome file is not alphanumerically sorted and only includes common chromosomes which is starting from 1 to "Y".
 The chromosome names are starting with a suffix "chr" at the before chromosome number.
